<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.ConsultarAgente">
<LinearLayout
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/texto_explicativo_consultar_agente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_explicativo_consultar_agente"
        android:textSize="@dimen/tamanho_texto_normal"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/edit_text_matricula"
        android:textAlignment="center"
        android:inputType="number"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/texto"
        android:hint="@string/hint_matricula_agente"
        android:textSize="@dimen/tamanho_texto_subtitulo"
        android:background="@color/fundo_text_view"/>
</LinearLayout>


    <LinearLayout
        android:id="@+id/botao_consultar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/fundoMaisEscuro"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/tamanho_icone_menu"
            android:layout_height="@dimen/tamanho_icone_menu"
            android:src="@drawable/ic_lupa"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/botao_consultar_main_texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consultar"
            android:textSize="@dimen/tamanho_texto_titulo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/botao_telefones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margem_vertical_botao"
        android:background="@color/fundoMaisEscuro"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/tamanho_icone_menu"
            android:layout_height="@dimen/tamanho_icone_menu"
            android:src="@drawable/ic_fone"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/botao_telefones_texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefones"
            android:textSize="@dimen/tamanho_texto_titulo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/botao_voltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margem_vertical_botao"
        android:background="@color/fundoMaisEscuro"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/tamanho_icone_menu"
            android:layout_height="@dimen/tamanho_icone_menu"
            android:src="@drawable/ic_voltar"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/botao_voltar_texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voltar"
            android:textSize="@dimen/tamanho_texto_titulo" />
    </LinearLayout>

</LinearLayout>
